--- a/src/app/pages/manage-product/manage-product.component.html
+++ b/src/app/pages/manage-product/manage-product.component.html
@@ -6,43 +6,75 @@
         <div class="responsive-two-columns">
             <div class="container-item">
                 <label class="label-input" for="id">Id</label>
-                <input autocomplete="off" type="text" id="id" class="input-style-1" name="id" formControlName="id">
+                <input autocomplete="off" type="text" (focusout)="checkIfIdExist()" id="id" class="input-style-1"
+                    name="id" formControlName="id">
+                <span class="display-errors" *ngIf="!isIdProductValid">El id ingresado ya se encuentra en uso.</span>
+                <div *ngIf="productForm.controls.id.invalid && (productForm.controls.id.dirty || productForm.controls.id.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.id.errors"></app-display-errors-validation-input>
+                </div>
             </div>
             <div class="container-item">
                 <label class="label-input" for="name">Nombre</label>
                 <input autocomplete="off" type="text" id="name" class="input-style-1" name="name"
                     formControlName="name">
+                <div *ngIf="productForm.controls.name.invalid && (productForm.controls.name.dirty || productForm.controls.name.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.name.errors"></app-display-errors-validation-input>
+                </div>
             </div>
             <div class="container-item">
                 <label class="label-input" for="description">Descripción</label>
                 <input autocomplete="off" type="text" id="description" class="input-style-1" name="description"
                     formControlName="description">
+                <div *ngIf="productForm.controls.description.invalid && (productForm.controls.description.dirty || productForm.controls.description.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.description.errors"></app-display-errors-validation-input>
+                </div>
             </div>
             <div class="container-item">
                 <label class="label-input" for="logo">Logo</label>
                 <input autocomplete="off" type="text" id="logo" class="input-style-1" name="logo"
                     formControlName="logo">
+                <div *ngIf="productForm.controls.logo.invalid && (productForm.controls.logo.dirty || productForm.controls.logo.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.logo.errors"></app-display-errors-validation-input>
+                </div>
             </div>
             <div class="container-item">
                 <label class="label-input" for="date_release">Fecha de lanzamiento</label>
-                <input autocomplete="off" type="text" id="date_release" class="input-style-1" name="date_release"
+                <input autocomplete="off" type="date" id="date_release" class="input-style-1" name="date_release"
                     formControlName="date_release">
+                <div *ngIf="productForm.controls.date_release.invalid && (productForm.controls.date_release.dirty || productForm.controls.date_release.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.date_release.errors"></app-display-errors-validation-input>
+                </div>
             </div>
             <div class="container-item">
-                <label class="label-input" for="date_revision">Fecha de revición</label>
-                <input autocomplete="off" type="text" id="date_revision" class="input-style-1" name="date_revision"
+                <label class="label-input" for="date_revision">Fecha de revisión</label>
+                <input autocomplete="off" type="date" id="date_revision" class="input-style-1" name="date_revision"
                     formControlName="date_revision">
+                <div *ngIf="productForm.controls.date_revision.invalid && (productForm.controls.date_revision.dirty || productForm.controls.date_revision.touched)"
+                    class="display-errors">
+                    <app-display-errors-validation-input
+                        [type]="productForm.controls.date_revision.errors"></app-display-errors-validation-input>
+                </div>
             </div>
 
 
             <div class="container-btn-restart">
-                <button>
+                <button (click)="resetForm()">
                     Reiniciar
                 </button>
             </div>
 
             <div class="container-btn-send">
-                <button>
+                <button type="submit" [disabled]="!productForm.valid||!isIdProductValid">
                     Enviar
                 </button>
             </div>
