--- a/src/app/pages/manage-product/manage-product.component.css
+++ b/src/app/pages/manage-product/manage-product.component.css
@@ -46,12 +46,12 @@
     left: 52px;
     color: #233263;
     font-weight: 700;
-    background-color: #FDF1A4;
+    background-color: #F5DF66;
     cursor: pointer;
 }
 
 .container-btn-send button:disabled {
-    background-color: #000;
+    background-color: #FDF1A4;
 }
 
 .label-input,
