--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: sans-serif;
 }
 
 .btn-primary {
@@ -16,7 +17,6 @@
 .display-errors {
     margin-top: 0;
     width: 100%;
-    text-align: center;
     color: red;
 }
 
