--- a/src/app/pages/manage-product/manage-product.component.html
+++ b/src/app/pages/manage-product/manage-product.component.html
@@ -68,7 +68,7 @@
 
 
             <div class="container-btn-restart">
-                <button (click)="resetForm()">
+                <button type="button" (click)="resetForm()">
                     Reiniciar
                 </button>
             </div>
