--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="container-search">
-        <input type="text" class="input-search" (keyup)="getProducts()" name="name" placeholder="Search...">
+        <input type="text" class="input-search" (keyup)="searchProduct()" [(ngModel)]="wordSearched" name="wordSearched"
+            placeholder="Search...">
 
         <button class="btn-primary btn-add" (click)="goToManageProduct()">Agregar</button>
     </div>
