--- a/src/app/pages/products/products.component.css
+++ b/src/app/pages/products/products.component.css
@@ -21,35 +21,10 @@
     position: absolute;
 }
 
-.container-table table thead {
-    background-color: #F4F6F9;
-}
-
-.container-table table thead tr th {
-    padding: 10px 0;
-}
-
-.container-table table tbody tr td {
-    padding: 15px 0;
-}
-
 .input-search {
     padding: 5px 2px;
     border: 3px solid #D9DBDE;
     border-radius: 6px;
-}
-
-.container-table {
-    width: 80%;
-    margin: auto;
-    background-color: #fff;
-    padding-top: 20px;
-    padding-bottom: 40px;
-}
-
-.container-table table {
-    border: 1px solid #F4F6F9;
-    margin-bottom: 40px !important;
 }
 
 .select-pagination {
@@ -59,12 +34,6 @@
 
 .container-options {
     position: relative;
-}
-
-.container-table table,
-.container-options {
-    width: 95%;
-    margin: auto;
 }
 
 .ul-list-options-dropdown {
@@ -88,4 +57,44 @@
 .ul-list-options-dropdown li {
     padding: 5px 0px;
     cursor: pointer;
+}
+
+.container-table {
+    width: 80%;
+    margin: auto;
+    background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    overflow-x: auto;
+}
+
+.container-table table {
+    border: 1px solid #F4F6F9;
+    margin-bottom: 40px !important;
+}
+
+.container-table table,
+.container-options {
+    width: 95%;
+    margin: auto;
+}
+
+.container-table table thead {
+    background-color: #F4F6F9;
+}
+
+.container-table table thead tr th {
+    padding: 10px 0;
+}
+
+.container-table table tbody tr td {
+    padding: 15px 0;
+}
+
+/* tablet breakpoint */
+@media (max-width:1270px) {
+
+    .container-table table {
+        width: 1000px;
+    }
 }
